--- a/github/workflows/ci.yml
+++ b/github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build and deploy:
     runs-on: ubuntu-latest # 自動で立ち上がる
+
     steps: # 処理リスト↓
       - uses: actions/checkout@v4 # gitへチェックアウト
         with:
@@ -15,23 +16,20 @@ jobs:
 
       - uses: actions/setup-node@v4 # nodeをセットアップする
         with:
-          node-version: "20"
-          # nodeのversionを指定
-          cache: "npm"
-          # npmのキャッシュを有効
-          cache-dependency-path: package-lock.json
-          #cacheを残しておく仕組み→変更がなければ、以前のキャッシュを使用
+          node-version: "20" # nodeのversionを指定
+          cache: "npm" # npmのキャッシュを有効
+          cache-dependency-path: package-lock.json #cacheを残しておく仕組み→変更がなければ、以前のキャッシュを使用
 
       - name: Install dependencies
-        run: npm ci #ci用のコマンド　package-lock.jsonを使用し完全に削除したkらインストールする
-
-      - name: Build and deploy
-        run: make deploy
+        run: npm ci #ci用のコマンド package-lock.jsonを使用し完全に削除したkらインストールする
 
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
         env: # Actions のステップで env を使って渡す
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }} # ← ここでSecretsからトークンを渡す
+
+      - name: Build and deploy
+        run: make deploy
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v4 #uploadを使用するという意味　actionsへ
