--- a/github/workflows/ci.yml
+++ b/github/workflows/ci.yml
@@ -37,8 +37,7 @@
 #         with:
 #           name: dist
 #           path: ./dist #アップロード
-
-name: CI Test & Deploy
+name: build and deploy
 
 on:
   push:
@@ -46,18 +45,21 @@ on:
       - main
 
 jobs:
-  test-deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: "20"
           cache: "npm"
+          cache-dependency-path: package-lock.json
 
       - name: Install dependencies
         run: npm ci
@@ -65,8 +67,9 @@ jobs:
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
 
-      - name: Run Makefile test-deploy
-        run: make test-deploy
+      - name: Build and deploy
+        run: |
+          npm run build
+          firebase deploy --token $FIREBASE_TOKEN
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-
