--- a/github/workflows/ci.yml
+++ b/github/workflows/ci.yml
@@ -1,48 +1,9 @@
-# name: build and deploy
-
-# on:
-#   push:
-#     branches:
-#       - main
-
-# jobs:
-#   build and deploy:
-#     runs-on: ubuntu-latest # 自動で立ち上がる
-
-#     steps: # 処理リスト↓
-#       - uses: actions/checkout@v4 # gitへチェックアウト
-#         with:
-#           fetch-depth: 0 # 履歴を含めチェックアウト
-
-#       - uses: actions/setup-node@v4 # nodeをセットアップする
-#         with:
-#           node-version: "20" # nodeのversionを指定
-#           cache: "npm" # npmのキャッシュを有効
-#           cache-dependency-path: package-lock.json #cacheを残しておく仕組み→変更がなければ、以前のキャッシュを使用
-
-#       - name: Install dependencies
-#         run: npm ci #ci用のコマンド package-lock.jsonを使用し完全に削除したkらインストールする
-
-#       - name: Install Firebase CLI
-#         run: npm install -g firebase-tools
-        
-
-#       - name: Build and deploy
-#         run: make deploy
-#         env: # Actions のステップで env を使って渡す
-#           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }} # ← ここでSecretsからトークンを渡す
-
-#       - name: Upload build artifact
-#         uses: actions/upload-artifact@v4 #uploadを使用するという意味　actionsへ
-#         with:
-#           name: dist
-#           path: ./dist #アップロード
-name: build and deploy
+name: Firebase CI/CD Deploy
 
 on:
   push:
     branches:
-      - main
+      - main # main ブランチに push したら実行
 
 jobs:
   build-and-deploy:
@@ -51,8 +12,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
