--- a/github/workflows/ci.yml
+++ b/github/workflows/ci.yml
@@ -3,16 +3,18 @@ name: Firebase CI/CD Deploy
 on:
   push:
     branches:
-      - main # main ブランチに push したら実行
+      - main  # main ブランチに push したら自動実行
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
+      # 1. リポジトリをチェックアウト
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 2. Node.js をセットアップ
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -20,13 +22,16 @@ jobs:
           cache: "npm"
           cache-dependency-path: package-lock.json
 
+      # 3. 依存パッケージをインストール
       - name: Install dependencies
         run: npm ci
 
+      # 4. Firebase CLI をインストール
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
 
-      - name: Build and deploy
+      # 5. ビルド＆デプロイ
+      - name: Build and Deploy to Firebase
         run: |
           npm run build
           firebase deploy --token $FIREBASE_TOKEN
