--- a/github/workflows/ci.yml
+++ b/github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
 
-      # 5. ビルド＆デプロイ
+      # 5. ビルド＆デプロ
       - name: Build and Deploy to Firebase
         run: |
           npm run build
