--- a/github/workflows/ci.yml
+++ b/github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Firebase CI/CD Deploy
+name: CI Test & Deploy
 
 on:
   push:
@@ -6,19 +6,18 @@ on:
       - main
 
 jobs:
-  build-and-deploy:
+  test-deploy:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
-          node-version: "20"
+          node-version: 20
           cache: "npm"
-          cache-dependency-path: package-lock.json
 
       - name: Install dependencies
         run: npm ci
@@ -26,9 +25,8 @@ jobs:
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
 
-      - name: Build and Deploy to Firebase
-        run: |
-          npm run buildgit
-          firebase deploy --token $FIREBASE_TOKEN
+      - name: Run Makefile test-deploy
+        run: make test-deploy
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+
