--- a/github/workflows/ci.yml
+++ b/github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         run: npm install -g firebase-tools
 
       - name: Run Makefile test-deploy
-        run: make test-deploy
+        run: make deploy
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
 
