--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,41 +1,32 @@
-name: Firebase CI/CD Deploy
+name: CI Test & Deploy
 
 on:
   push:
     branches:
-      - main  # main ブランチに push したら自動実行
+      - main
 
 jobs:
-  build-and-deploy:
+  test-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. リポジトリをチェックアウト
       - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # 履歴をすべて取得
+        uses: actions/checkout@v3
 
-      # 2. Node.js をセットアップ
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
-          node-version: "20"
+          node-version: 20
           cache: "npm"
-          cache-dependency-path: package-lock.json
 
-      # 3. 依存パッケージをインストール
       - name: Install dependencies
         run: npm ci
 
-      # 4. Firebase CLI をインストール
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
 
-      # 5. ビルド & デプロイ
-      - name: Build and Deploy to Firebase
-        run: |
-          npm run buildgit    # ローカルで動作確認済みのビルドコマンド
-          firebase deploy --token $FIREBASE_TOKEN
+      - name: Run Makefile test-deploy
+        run: make deploy
         env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}  # GitHub Secrets に登録済みのトークン
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+
