--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI Test & Deploy
+name: CI Deploy to Firebase Hosting
 
 on:
   push:
@@ -6,29 +6,39 @@ on:
       - main
 
 jobs:
-  test-deploy:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
+      # 1. リポジトリをチェックアウト
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
+      # 2. Node.js セットアップ
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
 
+      # 3. 依存関係インストール
       - name: Install dependencies
         run: npm ci
 
+      # 4. ビルド
       - name: Build project
         run: npm run build
 
+      # 5. Firebase CLI インストール
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
 
-      - name: Deploy to Firebase
-        run: firebase deploy --token "$FIREBASE_TOKEN"
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+      # 6. サービスアカウント認証設定
+      - name: Setup Firebase credentials
+        run: |
+          echo '${{ secrets.GOOGLE_APPLICATION_CREDENTIALS_JSON }}' > $HOME/firebase-key.json
+          export GOOGLE_APPLICATION_CREDENTIALS="$HOME/firebase-key.json"
+
+      # 7. Firebase Hosting デプロイ
+      - name: Deploy to Firebase Hosting
+        run: npx firebase deploy --only hosting --project indiegame-hub
