--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,8 @@ jobs:
 
       # 6. Firebase サービスアカウント JSON をファイル化
       - name: Setup Firebase credentials
-        run: echo "${{ secrets.GOOGLE_APPLICATION_CREDENTIALS_JSON }}" > ${{ github.workspace }}/firebase-key.json
+        run: |
+          echo "${{ secrets.FIREBASE_KEY }}" > ${{ github.workspace }}/firebase-key.json
 
       # 7. Firebase Hosting デプロイ
       - name: Deploy to Firebase Hosting
