--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,17 +29,11 @@ jobs:
       - name: Build project
         run: npm run build
 
-      # 5. Firebase CLI インストール
-      - name: Install Firebase CLI
-        run: npm install -g firebase-tools
-
-      # 6. Firebase サービスアカウント JSON をファイル化
-      - name: Setup Firebase credentials
-        run: |
-          echo "${{ secrets.FIREBASE_KEY }}" > ${{ github.workspace }}/firebase-key.json
-
-      # 7. Firebase Hosting デプロイ
+      # 5. Firebase Hosting デプロイ（公式 Action）
       - name: Deploy to Firebase Hosting
-        env:
-          GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/firebase-key.json
-        run: npx firebase deploy --only hosting --project indiegame-hub
+        uses: FirebaseExtended/action-hosting-deploy@v1
+        with:
+          repoToken: "${{ secrets.GITHUB_TOKEN }}"       # GitHub が自動で作るトークン
+          firebaseServiceAccount: "${{ secrets.FIREBASE_KEY }}" # サービスアカウント JSON
+          projectId: "indiegame-hub"                    # Firebase プロジェクトID
+          channelId: "live"                             # live チャンネルにデプロイ
