自動更新追加

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
 name: CI Deploy to Firebase Hosting
 
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    - cron: '0 16 * * *'
+  workflow_dispatch:
 
 jobs:
   deploy:
