--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test":"jest"
+    "test": "jest"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.2.4",
@@ -41,6 +41,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
     "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "ts-jest": "^29.4.4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.44.0",
