--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -40,3 +40,4 @@ jobs:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
           firebaseServiceAccount: "${{ secrets.FIREBASE_KEY }}"
           projectId: "indiegame-hub"
+          channelId: "live" 
