--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,5 +26,5 @@ jobs:
       - name: Run tests
         run: npm run test
 
-      - name: Build project
-        run: npm run build
+      # - name: Build project
+      #   run: npm run build
