--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -18,6 +18,9 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+        env:
+          VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
+          VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY }}
 
       - name: Create public directory if not exists
         run: mkdir -p public
@@ -30,6 +33,9 @@ jobs:
 
       - name: Build project
         run: npm run build
+        env:
+          VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
+          VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY }}
 
       - name: Check files in dist
         run: ls -la dist
